# jaxabstract-cli

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  jaxabstract-bg.sh  package-lock.json  package.json  rice1.json
scripts/: install-linux.sh
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
web/: OUTPUT.md  abstract.js  app-output.js  index.html  output.config.json  output.html  style.css
web/engine/: audio.js  overlay.js
web/media/: media.json
