[package]
name = "jaxabstract-output"
version = "0.1.0"
description = "Jaxabstract output host"
edition = "2021"

[[bin]]
name = "jaxabstract-output"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
num-complex = "0.4"
portable-pty = "0.9"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
